[package]
name = "valkey-bloom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "2.0.3"

[build-dependencies]
cc = "1.0.73"
bindgen = "0.60.1"

[lib]
crate-type = ["cdylib"]
name = "valkey_bloom"
