[package]
name = "valkey-bloom"
authors = ["Karthik Subbarao"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/KarthikSubbarao/valkey-bloom"
readme = "README.md"
description = "A bloom filter module for Valkey"
homepage = "https://github.com/KarthikSubbarao/valkey-bloom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "2.0.7"
bloomfilter = "1.0.13"
lazy_static = "1.4.0"
libc = "0.2"

[build-dependencies]
clippy = { version = "*", optional = true }

[lib]
crate-type = ["cdylib"]
name = "valkey_bloom"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
