[package]
name = "valkey-bloom"
authors = ["Karthik Subbarao"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/valkey-io/valkey-bloom"
readme = "README.md"
description = "A bloom filter module for Valkey"
homepage = "https://github.com/valkey-io/valkey-bloom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valkey-module = "0.1.2"
bloomfilter = "1.0.13"
lazy_static = "1.4.0"
libc = "0.2"

[dev-dependencies]
rand = "0.8"

[lib]
crate-type = ["cdylib"]
name = "valkey_bloom"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true

[features]
enable-system-alloc = ["valkey-module/enable-system-alloc"]
